--- a/app/views/user/my_comment.html.erb
+++ b/app/views/user/my_comment.html.erb
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-1 col-md-10 main-content">
-				<h3>印象评价</h3>
+				<h3 class="main-title">印象评价</h3>
 				<div class="row">
 					<div class="col-md-5 my-divider">
 						<hr class="my-line">
@@ -51,23 +51,66 @@
 						<hr class="my-dotted">
 					</div>
 				</div>
+				<!-- 评论 -->
 				<div class="row">
 					<div class="col-md-offset-1 col-md-10">
 						<div class="my-comment">
-							<%= image_tag"user_comment2.png"%>
-							第六日 <span class="gray-text">说：</span><br>
-							回过头来看，觉得夸张，哈哈，那时候迷的不要不要的<br>
+							<%= image_tag"user_comment2.png"%>  第六日 
+							<span class="gray-text">说：</span><br>
+							<div class="comment-text">								
+								回过头来看，觉得夸张，哈哈，那时候迷的不要不要的<br>
+							</div>
 							<div class="gray-bg">
 								<span class="gray-text">Mocie：</span>手机还是诺基亚经典款手机还是诺基亚经典款手机还是诺基亚经典款手机还是诺基亚经典款
 							</div>
-							<p class="gray-text">
+							<p class="gray-text comment-text">
 								<span>22小时前</span>
-								<span>回复</span>
+								<span class="my-reply">回复</span>
 							</p>
+							<hr>
 						</div>
-						
+						<div class="my-comment">
+							<%= image_tag"user_comment1.png"%>  第六日 
+							<span class="gray-text">说：</span><br>
+							<div class="comment-text">								
+								回过头来看，觉得夸张，哈哈，那时候迷的不要不要的<br>
+							</div>
+							<div class="gray-bg">
+								<span class="gray-text">Mocie：</span>手机还是诺基亚经典款手机还是诺基亚经典款手机还是诺基亚经典款手机还是诺基亚经典款
+							</div>
+							<p class="gray-text comment-text">
+								<span>22小时前</span>
+								<span class="my-reply">回复</span>
+							</p>
+							<%= image_tag"user_comment2.png"%>  第六日 
+							<span class="gray-text">说：</span><br>
+							<div class="comment-text">								
+								回过头来看，觉得夸张，哈哈，那时候迷的不要不要的<br>
+							</div>
+							<div class="gray-bg">
+								<span class="gray-text">Mocie：</span>手机还是诺基亚经典款手机还是诺基亚经典款手机还是诺基亚经典款手机还是诺基亚经典款
+							</div>
+							<p class="gray-text comment-text">
+								<span>22小时前</span>
+								<span class="my-reply">回复</span>
+							</p>
+							<hr>
+						</div>
+						<%= image_tag"user_comment1.png"%>  第六日 
+							<span class="gray-text">说：</span><br>
+							<div class="comment-text">								
+								回过头来看，觉得夸张，哈哈，那时候迷的不要不要的<br>
+							</div>
+							<div class="gray-bg">
+								<span class="gray-text">Mocie：</span>手机还是诺基亚经典款手机还是诺基亚经典款手机还是诺基亚经典款手机还是诺基亚经典款
+							</div>
+							<p class="gray-text comment-text">
+								<span>22小时前</span>
+								<span class="my-reply">回复</span>
+							</p>						
 					</div>
 				</div>
+				<h3 class="text-center">此处有分页</h3>
 			</div>
 		</div>
 	</div>
