--- a/app/views/user/my_infos.html.erb
+++ b/app/views/user/my_infos.html.erb
@@ -1,1 +1,41 @@
 <%= render partial: "my_homehead" %>
+<div class="main">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-offset-1 col-md-10 main-content content-text">
+				<h3 class="main-title title-text">个人资料</h3>
+				<div class="col-md-offset-1 col-md-2">
+					<div class="my-hover">
+						<%= image_tag"user_mypic.png"%>
+						<div class="hover-text text-center">我是昵称</div>
+					</div>	
+				</div>
+				<div class="col-md-9">
+					<div class="col-md-6 info-text">
+						姓名：张沫沫<br>
+											<br>
+						院系：艺术设计系
+					</div>
+					<div class="col-md-6">
+						性别：男<br>
+									 <br>
+						专业：设计
+					</div>
+					<div class="col-md-12">
+						个性签名：我就是我，颜色不一样的烟火！
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<script type="text/javascript">
+	$(function(){
+		$(".my-hover").mouseover(function(){
+			$(".hover-text").show();
+		}).mouseleave(function(){
+			$(".hover-text").hide();
+		});
+	})
+</script>
