--- a/app/assets/stylesheets/application/user.scss
+++ b/app/assets/stylesheets/application/user.scss
@@ -374,18 +374,6 @@
 			padding-top:20px;
 		}
 	}
-	// .finish-icon1{
-	// 	background: #338C8E;
-	// 	border-radius: 70px;
-	// 	width: 140px;
-	// 	height: 140px;
-	// 	line-height: 140px;
-	// 	font-size: 72px;
-	// 	color: #fff;
-	// }
-	
-
-
 	// 我的勋章
 	.my-medal{
 		display: inline;
@@ -509,7 +497,7 @@
 			height: 35px;
 			width: 138px;
 			line-height: 35px;
-			color: #fff;
+			color: #ccc;
 		}
 	}
 }
