--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -24,6 +24,7 @@
                   <span class="input-icon">
                     <%= text_field_tag :q, nil, placeholder: "请输入关键字", class: "nav-search-input", id: "nav-search-input" %>
                     <i class="icon-search nav-search-icon"></i>
+                    <%= hidden_field_tag :type, params[:type] %>
                   </span>
                   <%= submit_tag "搜索", style: "display: none;"%>
                 <% end %>
@@ -32,19 +33,19 @@
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                 <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
               </a>
-              <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+              <!-- <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                 <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
         <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 main-bg">
-          <% unless @search.results.present? %>
+          <% unless @search.present? %>
             <div class="col-sm-12">
               <div class="alert alert-warning" role="alert">抱歉！没有找到包含关键词&nbsp;&nbsp;<span class="text-muted">[ <%= params[:q] %> ]</span>&nbsp;&nbsp;的项目</div>
             </div>
           <% else %>
-            <% @search.each_hit_with_result do |hit, project| %>
+            <% @search.each do |project| %>
               <div class="col-xs-12 col-md-6 col-sm-6 col-lg-6 project-title-show">
                 <div class="row blue-bg main">
                   <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-right">
