--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -35,7 +35,7 @@
 					    	<li><a href="<%= evaluations_path%>">职业测评</a></li>
 				 	</ul>
 				</a></li>
-				<li class="<%= "active" if params[:controller] == 'user' %>"><%=link_to "个人中心",my_courses_user_index_path %></li>
+				<li class="<%= "active" if params[:controller] == 'worktrains' %>"><%=link_to "职前培训",worktrains_path %></li>
 			</ul>
 			<ul id="userInfoMenu" class="nav navbar-nav navbar-right sign">
 				<%= render 'share/user_info' %>
