--- a/app/views/worktrains/index.html.erb
+++ b/app/views/worktrains/index.html.erb
@@ -9,80 +9,92 @@
 	<div class="row">
 	  <div class="col-md-4 courses_tent">
       <div class="bordered">
-        <%= image_tag("workt3.png", class: "img-responsive")%>
-        <div class="col-sm-12 mt-10">
-          <h4>我是课程名称</h4>
-          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-        </div>
-        <div class="col-sm-12 infos">
-          <span class="glyphicon glyphicon-eye-open"></span> 1549
-          &nbsp;&nbsp;&nbsp;
-          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-        </div>
+        <a href="#">
+          <%= image_tag("workt3.png", class: "img-responsive")%>
+          <div class="col-sm-12 mt-10">
+            <h4>我是课程名称</h4>
+            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+          </div>
+          <div class="col-sm-12 infos">
+            <span class="glyphicon glyphicon-eye-open"></span> 1549
+            &nbsp;&nbsp;&nbsp;
+            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+          </div>
+        </a>
       </div>
       <div class="bordered">
-        <%= image_tag("workt1.png", class: "img-responsive")%>
-        <div class="col-sm-12 mt-10">
-          <h4>我是课程名称</h4>
-          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-        </div>
-        <div class="col-sm-12 infos">
-          <span class="glyphicon glyphicon-eye-open"></span> 1549
-          &nbsp;&nbsp;&nbsp;
-          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-        </div>
-      </div>
-    </div>
-		<div class="col-md-4 courses_tent">
-      <div class="bordered">
-        <%= image_tag("workt2.png", class: "img-responsive")%>
-        <div class="col-sm-12 mt-10">
-          <h4>我是课程名称</h4>
-          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-        </div>
-        <div class="col-sm-12 infos">
-          <span class="glyphicon glyphicon-eye-open"></span> 1549
-          &nbsp;&nbsp;&nbsp;
-          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-        </div>
-      </div>
-      <div class="bordered">
-        <%= image_tag("workt3.png", class: "img-responsive")%>
-        <div class="col-sm-12 mt-10">
-          <h4>我是课程名称</h4>
-          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-        </div>
-        <div class="col-sm-12 infos">
-          <span class="glyphicon glyphicon-eye-open"></span> 1549
-          &nbsp;&nbsp;&nbsp;
-          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-        </div>
+        <a href="#">
+          <%= image_tag("workt1.png", class: "img-responsive")%>
+          <div class="col-sm-12 mt-10">
+            <h4>我是课程名称</h4>
+            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+          </div>
+          <div class="col-sm-12 infos">
+            <span class="glyphicon glyphicon-eye-open"></span> 1549
+            &nbsp;&nbsp;&nbsp;
+            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+          </div>
+        </a>
       </div>
     </div>
 		<div class="col-md-4 courses_tent">
       <div class="bordered">
-        <%= image_tag("workt1.png", class: "img-responsive")%>
-        <div class="col-sm-12 mt-10">
-          <h4>我是课程名称</h4>
-          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-        </div>
-        <div class="col-sm-12 infos">
-          <span class="glyphicon glyphicon-eye-open"></span> 1549
-          &nbsp;&nbsp;&nbsp;
-          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-        </div>
+        <a href="#">
+          <%= image_tag("workt2.png", class: "img-responsive")%>
+          <div class="col-sm-12 mt-10">
+            <h4>我是课程名称</h4>
+            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+          </div>
+          <div class="col-sm-12 infos">
+            <span class="glyphicon glyphicon-eye-open"></span> 1549
+            &nbsp;&nbsp;&nbsp;
+            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+          </div>
+        </a>
       </div>
       <div class="bordered">
-        <%= image_tag("workt3.png", class: "img-responsive")%>
-        <div class="col-sm-12 mt-10">
-          <h4>我是课程名称</h4>
-          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-        </div>
-        <div class="col-sm-12 infos">
-          <span class="glyphicon glyphicon-eye-open"></span> 1549
-          &nbsp;&nbsp;&nbsp;
-          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-        </div>
+        <a href="#">
+          <%= image_tag("workt3.png", class: "img-responsive")%>
+          <div class="col-sm-12 mt-10">
+            <h4>我是课程名称</h4>
+            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+          </div>
+          <div class="col-sm-12 infos">
+            <span class="glyphicon glyphicon-eye-open"></span> 1549
+            &nbsp;&nbsp;&nbsp;
+            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+          </div>
+        </a>
+      </div>
+    </div>
+		<div class="col-md-4 courses_tent">
+      <div class="bordered">
+        <a href="#">
+          <%= image_tag("workt1.png", class: "img-responsive")%>
+          <div class="col-sm-12 mt-10">
+            <h4>我是课程名称</h4>
+            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+          </div>
+          <div class="col-sm-12 infos">
+            <span class="glyphicon glyphicon-eye-open"></span> 1549
+            &nbsp;&nbsp;&nbsp;
+            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+          </div>
+        </a>
+      </div>
+      <div class="bordered">
+        <a href="#">
+          <%= image_tag("workt3.png", class: "img-responsive")%>
+          <div class="col-sm-12 mt-10">
+            <h4>我是课程名称</h4>
+            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
+          </div>
+          <div class="col-sm-12 infos">
+            <span class="glyphicon glyphicon-eye-open"></span> 1549
+            &nbsp;&nbsp;&nbsp;
+            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+          </div>
+        </a>
       </div>
     </div>
     <div class="col-md-12">
