--- a/app/views/admin/applies/_data.html.erb
+++ b/app/views/admin/applies/_data.html.erb
@@ -14,12 +14,13 @@
 				<th>最高毕业院校</th>
 				<th>了解渠道</th>
 				<th>报名课程</th>
+				<th>操作</th>
 			</tr>
 		</thead>
 		<tbody>
 			<% if applies.empty? %>
 				<tr>
-					<td colspan="12" class="text-center">暂时还没有报名的学生</td>
+					<td colspan="13" class="text-center">暂时还没有报名的学生</td>
 				</tr>
 			<% else %>
 				<% applies.each_with_index do |apply, index| %>
@@ -36,6 +37,11 @@
 						<td><%= apply.school_name %></td>
 						<td><%= apply.way %></td>
 						<td><%= apply.train_name %></td>
+						<td>
+							<%= link_to admin_apply_path(apply), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
+								<span class="glyphicon glyphicon-trash"></span>
+							<%end%>
+						</td>
 					</tr>
 				<% end %>
 			<% end %>
