--- a/app/views/worktrains/show.html.erb
+++ b/app/views/worktrains/show.html.erb
@@ -16,7 +16,7 @@
 			</div>
 			<div class="media-body">
 				<h3 class="media-heading">我是课程名称</h3>
-				<div class="infos">
+				<div class="infos my-infos">
           <span class="glyphicon glyphicon-eye-open"></span> 1549
           &nbsp;&nbsp;&nbsp;
           <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
