--- a/app/assets/stylesheets/application/worktrains.scss
+++ b/app/assets/stylesheets/application/worktrains.scss
@@ -82,6 +82,9 @@
 		font-size: 16px;
 		color: #838383
 	}
+	.col-text{
+		padding-left: 0;
+	}
 	.my-btn{
 		padding: 12px 70px;
 		font-size: 22px;
