--- a/app/views/worktrains/show.html.erb
+++ b/app/views/worktrains/show.html.erb
@@ -27,7 +27,7 @@
 				<h4>招生对象：</h4>
 				<p class="train-main">1.招生对象招生对象招生对象招生对象招生对象</p>
 				<p class="train-main">2.招生对象招生对象招生对象招生对象招生对象招生对象招生对象招生对象招生对象招生对象</p>
-				<div class="col-md-6 text-left">
+				<div class="col-md-6 text-left col-text">
 					<button class="btn btn-default my-btn mybtn1" id="mybtn1">一键报名</button>
 				</div>
 				<div class="col-md-6 text-left">
