--- a/app/assets/stylesheets/application/share.scss
+++ b/app/assets/stylesheets/application/share.scss
@@ -189,9 +189,6 @@
 				padding: 10px 15px;
 				.form-group {
 					margin-bottom: 20px;
-					.form-control {
-						height: 42px;
-					}
 				}
 				.form-actions {
 					margin-bottom: 10px;
@@ -208,40 +205,40 @@
 						background-color:#FF5962!important;
 					}
 				}
-			}
-//add
 
-				.form-group {
-		
-			.btn {
-				width: 80%;
-				border-radius:8px;
-				line-height: 15px;
-				&.btn-info-tp {
-					background-color:rgba(0, 203, 210,1)!important;
+				.radio-inline {
+					padding-top: 0px;
 				}
+			}
+
+			.form-group {
 				.btn {
-					border-radius: 8px;
-					line-height: 24px;
+					width: 80%;
+					border-radius:8px;
+					line-height: 15px;
 					&.btn-info-tp {
-						width: 100%;
-						background-color:rgba(0, 203, 210,0.8)!important;
+						background-color:rgba(0, 203, 210,1)!important;
+					}
+					.btn {
+						border-radius: 8px;
+						line-height: 24px;
+						&.btn-info-tp {
+							width: 100%;
+							background-color:rgba(0, 203, 210,0.8)!important;
+						}
 					}
 				}
 			}
-		}
-	
-
-		//modal中列表
-		.modal-list {
-			padding-left: 10px;
-			padding-right: 10px;
-			.row {
-				margin: 5px 0px;
+			//modal中列表
+			.modal-list {
+				padding-left: 10px;
+				padding-right: 10px;
+				.row {
+					margin: 5px 0px;
+				}
 			}
 		}
 	}
-}
 }
 //traing_platform_modal2
 .my-nav1{
