--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -39,8 +39,36 @@
             </div>
           </div>
         </div>
+
+        <% if params[:type].blank? %>
+          <div class="project-search-condition">
+            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 search-row">
+              <div class="pull-left search-title">
+                <%= image_tag "iconfont-lingxing.svg", width: "16px;" %>
+                <strong>项目类型：</strong>
+              </div>
+              <ul class="nav nav-pills search-condition">
+                <li class="active"><a href="#">全部</a></li>
+                <li><a href="#">跟我练</a></li>
+                <li><a href="#">一起来搞</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 search-row">
+              <div class="pull-left search-title">
+                <%= image_tag "iconfont-lingxing.svg", width: "16px;" %>
+                <strong>项目标签：</strong>
+              </div>
+              <ul class="nav nav-pills search-condition">
+                <li class="active"><a href="#">CSS</a></li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">JAVASCRIPT</a></li>
+              </ul>
+            </div>
+          </div>
+        <% end %>
+
         <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 main-bg">
-          <% unless @search.present? %>
+          <% if @search.blank? %>
             <div class="col-sm-12">
               <div class="alert alert-warning" role="alert">抱歉！没有找到包含关键词&nbsp;&nbsp;<span class="text-muted">[ <%= params[:q] %> ]</span>&nbsp;&nbsp;的项目</div>
             </div>
