--- a/app/views/wechat/applies/error.html.erb
+++ b/app/views/wechat/applies/error.html.erb
@@ -1,3 +1,14 @@
-<div class="container">
-	<div class="alert alert-danger" role="alert">error with no openid</div>
-</div>
+<div class="main my-row clearfix">
+	<div class="text-center">
+		<%=image_tag"apply2.png",width:"90%"%>
+	</div>
+	<%= render partial: "flash" %>
+	<!-- 加载当前学生的报名记录 -->
+	<div class="col-xs-12 turn-back"><a href="javascript: void(0);" onclick="javascript:history.back(-1);">返回上一页</a></div>
+</div>	
+
+<script>
+	$(function(){
+		$.backstretch("<%= image_url "apply_info3.png"%>");
+	});
+</script>
