--- a/app/views/user/my_comment.html.erb
+++ b/app/views/user/my_comment.html.erb
@@ -20,8 +20,7 @@
 					<form class="form-horizontal">
 					  <div class="form-group">
 					    <div class="col-md-5">
-					      <input type="email" class="form-control" id="inputEmail3" placeholder=
-					      " 请输入您的描述，不超过10个字">
+					      <textarea class="form-control" rows="1" placeholder=" 请输入您的描述，不超过10个字"></textarea>
 					    </div>
 					    <div class="col-md-1">
 					    	<button class="btn btn-default my-btn">确定</button>
