--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -12,13 +12,10 @@
     background-color: #2EC8BA;
   }
   .yellow-bg{
-    background-color: #F6C22F;
-  }
-  .orange-bg{
-    background-color: #FF5A15;
+    background-color: #f4bb41;
   }
   .purple-bg{
-    background-color: #A600F9;
+    background-color: #9098ff;
   }
   .project-title-show {
     a {
