add train model

--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -12,6 +12,11 @@
 			<%end%>
 		</li>
 		<li>
+			<%= link_to admin_trains_path do %>
+				<span class="glyphicon glyphicon-education"></span> 职前培训
+			<%end%>
+		</li>
+		<li>
 			<%= link_to admin_companies_path do %>
 				<span class="glyphicon glyphicon-briefcase"></span> 公司列表
 			<%end%>
