--- a/app/views/user/home.html.erb
+++ b/app/views/user/home.html.erb
@@ -105,14 +105,14 @@
 <script type="text/javascript">
 	$(function(){
 		$("#display1").mouseover(function(){
-			$("#details1").show();
+			$("#details1").fadeIn();
 		}).mouseleave(function(){
-			$("#details1").hide();
+			$("#details1").fadeOut();
 		});
 		$("#display2").mouseover(function(){
-			$("#details2").show();
+			$("#details2").fadeIn();
 		}).mouseleave(function(){
-			$("#details2").hide();
+			$("#details2").fadeOut();
 		});
 	})
 </script>
