--- a/app/views/user/infos.html.erb
+++ b/app/views/user/infos.html.erb
@@ -33,9 +33,9 @@
 <script type="text/javascript">
 	$(function(){
 		$(".my-hover").mouseover(function(){
-			$(".hover-text").show();
+			$(".hover-text").fadeIn();
 		}).mouseleave(function(){
-			$(".hover-text").hide();
+			$(".hover-text").fadeOut();
 		});
 	})
 </script>
