--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -6,40 +6,87 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-3">
-			<div class="thumbnail">
+		<a href="#">
+			<div class="thumbnail hover-info" id="mbti1">
 				<%=image_tag"evaluations-mbti.png"%>
 				<div class="caption">
 					<h3 class="text-center">MBTI性格测试</h3>
-					<p class="text-justify">MBTI能够让人们更好的认识和了解自己，可以帮助HR部门对不同类型的员工进行更好的组合。已成为应用最广泛的识别人与人差异的测评工具之一。</p>
+					<p class="text-justify">MBTI能够让人们更好的认识和了解自己，可以帮助HR部门对不同类型的员工进行更好的组合。已是应用最广泛的识别人与人差异的测评工具之一。</p>
+				</div>
+				<div class="hover1" id="mbti2">
+					<p class="text-center">开始测试</p>
 				</div>
 			</div>
+			</a>
 		</div>
 		<div class="col-xs-3">
-			<div class="thumbnail">
-				<%=image_tag"evaluations-disc.png"%>
-				<div class="caption">
-					<h3 class="text-center">DISC性格测试</h3>
-					<p class="text-justify">DISC个性测验是国外企业广泛应用的一种人格测验，用于测查、评估和帮助人们改善其行为方式、人际关系、工作绩效、团队合作、领导风格等。</p>
+			<a href="#">
+				<div class="thumbnail hover-info" id="disc1">
+					<%=image_tag"evaluations-disc.png"%>
+					<div class="caption">
+						<h3 class="text-center">DISC性格测试</h3>
+						<p class="text-justify">DISC个性测验是国外企业广泛应用的一种人格测验，用于测查、评估和帮助人们改善其行为方式、人际关系、工作绩效、团队合作、领导风格等。</p>
+					</div>
+					<div class="hover1" id="disc2">
+						<p class="text-center">开始测试</p>
+					</div>
 				</div>
-			</div>
+			</a>
 		</div>
 		<div class="col-xs-3">
-			<div class="thumbnail">
-				<%=image_tag"evaluations-hld.png"%>
-				<div class="caption">
-					<h3 class="text-center">霍兰德职业测试</h3>
-					<p class="text-justify">霍兰德的职业兴趣理论主要从兴趣的角度出发来探索职业指导的问题。他明确提出了职业兴趣的人格观，使人们对职业兴趣的认识有了质的变化。</p>
+			<a href="#">
+				<div class="thumbnail hover-info" id="hld1">
+					<%=image_tag"evaluations-hld.png"%>
+					<div class="caption">
+						<h3 class="text-center">霍兰德职业测试</h3>
+						<p class="text-justify">霍兰德的职业兴趣理论主要从兴趣的角度出发来探索职业指导的问题。他明确提出了职业兴趣的人格观，使人们对职业兴趣的认识有了质的变化。</p>
+					</div>
+					<div class="hover1" id="hld2">
+						<p class="text-center">开始测试</p>
+					</div>
 				</div>
-			</div>
+			</a>
 		</div>
 		<div class="col-xs-3">
-			<div class="thumbnail">
-				<%=image_tag"evaluations-ket.png"%>
-				<div class="caption">
-					<h3 class="text-center">卡尔特16PF测验</h3>
-					<p class="text-justify">卡特尔在其人格的解释性理论构想的基础上编制了16种人格因素问卷，从16个方面描述个体的人格特征。16个因素的说明可详见测验指导书。</p>
+			<a href="#">
+				<div class="thumbnail hover-info" id="ket1">
+					<%=image_tag"evaluations-ket.png"%>
+					<div class="caption">
+						<h3 class="text-center">卡尔特16PF测验</h3>
+						<p class="text-justify">卡特尔在其人格的解释性理论构想的基础上编制了16种人格因素问卷，从16个方面描述个体的人格特征。16个因素的说明可详见测验指导书。</p>
+					</div>
+					<div class="hover1" id="ket2">
+						<p class="text-center">开始测试</p>
+					</div>
 				</div>
-			</div>
+			</a>
 		</div>
 	</div>
 </div>
+
+
+<script type="text/javascript">
+	$(function(){
+		$("#mbti1").mousemove(function(){
+			$("#mbti2").fadeIn()
+		}).mouseleave(function(){
+			$("#mbti2").fadeOut()
+		});
+		$("#disc1").mousemove(function(){
+			$("#disc2").fadeIn()
+		}).mouseleave(function(){
+			$("#disc2").fadeOut()
+		});
+		$("#hld1").mousemove(function(){
+			$("#hld2").fadeIn()
+		}).mouseleave(function(){
+			$("#hld2").fadeOut()
+		});
+		$("#ket1").mousemove(function(){
+			$("#ket2").fadeIn()
+		}).mouseleave(function(){
+			$("#ket2").fadeOut()
+		});
+
+	})
+</script>
